Fri May 18 18:28:20 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* macros.c (c_macro): Prevent dollar expansion between vertical bar
	characters.
	* regression/tests_pass/variable_substitution.s: Enhance test.

Fri May 18 15:47:53 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpumem.c (dstreglist): Fix compiler warning.

Sat Apr  7 15:39:45 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* README: Add v2.00 testers.  Updated contributors list.

Thu Apr  5 02:02:54 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* README: Tune credits, release info and add "Future development"
	section.

Thu Apr  5 01:05:32 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am, output.h (GCCSDK_REVISION): Add svn branch.

Wed Apr  4 23:56:17 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/include/load_literal_basic.s: Removed the MOVT
	optimisation tests.
	* regression/tests_pass/load_literal3.s: Likewise.
	* m_cpumem.c (DestMem_RelocUpdater): Removed MOVT optimisation.
	(m_push, m_pop): Add comments.
	(CPUMem_ConstantInMOVT): Removed.
	* m_cpumem.h (CPUMem_ConstantInMOVT): Removed.
	* lit.c (Lit_RegisterInt, Lit_DumpPool): Removed MOVT optimisation.

Sat Mar 31 03:53:17 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/instr_ldm_stm_pop_push.s: Add one register
	PUSH/POP test.
	* m_cpumem.c (dstreglist): Convert one register PUSH/POP into STR/LDR.
	Add warnings for unpredictable constructs.

Sat Mar 31 00:01:47 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpuctrl.c (ADR_RelocUpdater): Take imported symbol offset into
	account.

Thu Mar 29 22:50:57 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/variables.s: Add tests for initial :DEF:
	value.
	* regression/tests_fail/local_label2.s: Fix comment typo.
	* symbol.c, symbol.h (symbolNew): Rename to Symbol_New.
	(symbolFree): Rename to Symbol_Free.  Simplify.
	(symbolGet): Rename to Symbol_Get.
	(symbolFind): Rename to Symbol_Find.